New "file_coordinates". Finished "files.csv" file in data-raw.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(correction_coordinates)
 export(epsg_ceh)
 export(extract_ddmmss)
 export(format_columns)
-export(read_cedex_basin)
+export(get_ceh_data)
 export(select_coord)
 export(set_colmode)
