--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: cehAforos
-Title: What the Package Does (One Line, Title Case)
+Title: Read and download data from gauging station in Spanish rivers
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Roberto", "Molowny-Horas", , "roberto@creaf.uab.es", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-2626-6379"))
+Description: Simple download of dailyl and monthly flow data from gauging stations in Spanish rivers. Data sets are retrieved from the web of the Spanish CEDEX.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports: cli (>= 3.6.3), sf (>= 1.0-17), httr (>= 1.4.7), dplyr (>= 1.1.4)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
