--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Roberto", "Molowny-Horas", , "roberto@creaf.uab.es", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2626-6379"))
-Description: Simple download of dailyl and monthly flow data from gauging stations in Spanish rivers. Data sets are retrieved from the web of the Spanish CEDEX.
+Description: Simple download of daily and monthly flow data from gauging stations in Spanish rivers. Data sets are retrieved from the web of the Spanish CEDEX.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -13,3 +13,6 @@ Imports: cli (>= 3.6.3), sf (>= 1.0-17), httr (>= 1.4.7), dplyr (>= 1.1.4)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
+LazyData: true
