Added \dontrun{} to roxygen2 headers.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: cehAforos
+Package: hydrospain
 Title: Read and download data from gauging station in Spanish rivers
 Version: 0.0.1
 Authors@R: 
