Modified to use httr instead of httr2.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,5 @@ export(replace_accent)
 export(select_basins)
 export(select_coordinates)
 export(status_code)
-importFrom(httr2,req_perform)
-importFrom(httr2,request)
-importFrom(httr2,resp_status)
+importFrom(httr,GET)
 importFrom(utils,read.csv2)
