Revert "Modified to use httr instead of httr2."
This reverts commit f17122463fd632e9a353269ed9a4f32da8f02adb.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(replace_accent)
 export(select_basins)
 export(select_coordinates)
 export(status_code)
-importFrom(httr,GET)
+importFrom(httr2,req_perform)
+importFrom(httr2,request)
+importFrom(httr2,resp_status)
 importFrom(utils,read.csv2)
